--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 .c-box {
-  background: #fff;
+  background: rgba(168, 168, 168, 0.247);
   border: 1px solid rgba(0,0,0,0.3);
   border-radius: 4px;
   box-sizing: border-box;
